# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  cloudbuild.yaml  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20210809220405_add_status_to_subscriptions.sql  20210814190318_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
