[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Alvaro Muhlethaler <alvaro.muhlethaler@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
actix-rt = "2.2.0"
reqwest = "0.11.2"
serde = { version="1", feature=["derive"]}


[dev-dependencies]
tokio = "1.4.0"
