[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Alvaro Muhlethaler <alvaro.muhlethaler@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
actix-rt = "2.2.0"
reqwest = "0.11.2"
serde = { version="1", feature=["derive"] }
config = "0.11.0"
chrono = "0.4.19"
uuid = { version="0.8.1", features=["v4"] }
log = "0.4.14"
env_logger = "0.8.3"
tracing= { version="0.1", features=["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"


[dependencies.sqlx]
version = "0.5.1"
default-feataures = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
tokio = "1.4.0"
